--- a/index.html
+++ b/index.html
@@ -85,26 +85,26 @@
             <div class="container clearfix">
               <div class="row services">
                 <div class="col-md-12">
-                  <h2 class="heading">Skills</h2>
+                  <h2 class="heading title-3">Skills</h2>
                   <div class="row">
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-desktop"></i></div>
-                        <h4 class="heading">Webdesign</h4>
+                        <h5 class="heading">Webdesign</h5>
                         <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-print"></i></div>
-                        <h4 class="heading">Illustrator</h4>
+                        <h5 class="heading">Illustrator</h5>
                         <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-globe"></i></div>
-                        <h4 class="heading">SEO and SEM</h4>
+                        <h5 class="heading">SEO and SEM</h5>
                         <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
                       </div>
                     </div>
@@ -113,21 +113,21 @@
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-lightbulb-o"></i></div>
-                        <h4 class="heading">Consulting</h4>
+                        <h5 class="heading">Consulting</h5>
                         <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-envelope-o"></i></div>
-                        <h4 class="heading">Email Marketing</h4>
+                        <h5 class="heading">Email Marketing</h5>
                         <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-user"></i></div>
-                        <h4 class="heading">UX &amp; UI</h4>
+                        <h5 class="heading">UX &amp; UI</h5>
                         <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
                       </div>
                     </div>
@@ -138,13 +138,13 @@
           </div>
         </section>
 
-    <!--secction 04 portfolio-->
-    <section id="page4">
+        <!--secction 04 portfolio-->
+        <section id="page4">
           <div class="sec04 content">
             <div class="container clearfix">
               <div class="row">
                 <div class="col-md-12">
-                  <h2 class="heading title-3">Portfolio</h2>
+                  <h2 class="heading title-4">Portfolio</h2>
                   <p class="text-center">You can make also a portfolio or image gallery.</p>
                   <div class="row">
                     <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
@@ -189,9 +189,9 @@
               </div>
             </div>
           </div>
-    </section><!-- /.portfolio -->
+        </section><!-- /.portfolio -->
 
-  <!-- section 05 Friends Tools-->
+        <!-- section 05 Friends Tools-->
         <section id="page5">
           <div class="content">
             <div class="container clearfix">
@@ -274,8 +274,12 @@
                       </form>
                     </div>
                     <div class="col-md-6">
-                    
-                      <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="#" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                    <p class="mail">fransu.dev@gmail.com</p>
+                   <p class="social">
+                   <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a>
+                   <a href="#" title="" class="twitter"><i class="fa fa-linkedin"></i></a>
+                   <a href="#" title="" class="gplus"><i class="fa fa-pinterest-p"></i></a>
+                   <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a>
                     </div>
                   </div>
                   <div class="row copyright credito">
