--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- Bootstrap and Font Awesome css-->
     <!-- we use cdn but you can also include local files located in css directory-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome-animation.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
     <!-- onepage scroll stylesheet-->
@@ -42,7 +42,6 @@
                   <img src="img/logo_lilac-02.png" class="logo_lilac"> <br>
                   <p class="">Design & Developer!</p>
                   <p class="italic">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>
-                  <p class="italic">I have best results with nice pictures on the background or nice colours.</p>
                 </div>
               </div>
             </div>
