--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                   <h1>Francisca Ojeda</h1><!--SEO -->
                   <img src="img/logo_lilac-02.png" class="logo_lilac"> <br>
-                  <p class="">Design & Developer!</p>
+                  <p class="">Design & Developer</p>
                   <p class="italic">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>
                 </div>
               </div>
@@ -56,22 +56,22 @@
                 <div class="col-md-6"> 
                 <p><img <img class="img-responsive img-circle img-thumbnail cv-photo" src="img/cv_fran_900px.png"></p>
                 </div>
-                <div class="col-md-5 col-md-offset-1">
-                  <h2 class="heading">About me</h2>
-                  <p class="lead">Francisca C. Ojeda Alvarado</p>
-                  <p>Me apasiona la tecnología y creo que es es la herramienta que permitirá transformar el mundo en un mejor lugar para las personas que más lo necesitan. Diseñadora de Productos por vocación, soy creativa, entusiasta y emprendedora. Colaboro con clientes logrando nutrir sus ideas gracias a especificaciones de diseño bien pensadas.</p>
-                  <p>Formo parte de la nueva generación de Laboratoria Chile, donde inicié mi carrera en el mundo del código y tengo alto interés por el área UX/UI. 
-                  En mi tiempo libre suelo entrenar Roller Derby, y me encantan los juegos de mesa como Catán o Dominion.</p>
+                <div class="col-md-6">
+                  <h2 class="title-2">About me</h2>
+                  <p class="lead name">Francisca C. Ojeda Alvarado</p>
+                  <p class="statement">Me apasiona la tecnología y creo que es es la herramienta que permitirá transformar el mundo en un mejor lugar para las personas que más lo necesitan. Diseñadora de Productos por vocación, soy creativa, entusiasta y emprendedora. Colaboro con clientes logrando nutrir sus ideas gracias a especificaciones de diseño bien pensadas.</p>
+                  <p class="statement">Formo parte de la nueva generación de Laboratoria Chile, donde inicié mi carrera en el mundo del código y tengo alto interés por el área UX/UI. 
+                  En mi tiempo libre suelo entrenar Roller Derby, y me encantan los juegos de mesa como Catán.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12 col-xs-12">
-                  <h5 class="title-2">other interests</h5>
+                  <h5 class="title-2b">other interests</h5>
                   <ul class="block intereses text-center">
                     <li><a href="#"></a><i class="fa fa-paw" aria-hidden="true"></i></li>
                     <li><a href="#"></a><i class="fa fa-gamepad" aria-hidden="true"></i></li>
                     <li><a href="#"></a><i class="fa fa-coffee" aria-hidden="true"></i></li>
-                    <li><a href="#"></a><i class="fa fa-paint-brush" aria-hidden="true"></i></li>
+                    <li><a href="#"></a><i class="fa fa-book" aria-hidden="true"></i></li>
                   </ul>
                 </div>
               </div>
@@ -89,45 +89,45 @@
                     <div class="col-sm-4">
                       <div class="box">
                         <div class="icon"><i class="fa fa-desktop"></i></div>
-                        <h5 class="heading">Webdesign</h5>
-                        <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                        <h5 class="heading">Developer</h5>
+                        <p>Aenean id eros eu leo scelerisque.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
-                        <div class="icon"><i class="fa fa-print"></i></div>
-                        <h5 class="heading">Illustrator</h5>
-                        <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                        <div class="icon"><i class="fa fa-table"></i></div>
+                        <h5 class="heading">Prototyper</h5>
+                        <p>Aenean id eros eu leo scelerisque.</p>
                       </div>
                     </div>
                     <div class="col-sm-4">
                       <div class="box">
-                        <div class="icon"><i class="fa fa-globe"></i></div>
-                        <h5 class="heading">SEO and SEM</h5>
-                        <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                        <div class="icon"><i class="fa fa-eye"></i></div>
+                        <h5 class="heading">Wireframes</h5>
+                        <p>Aenean id eros eu leo scelerisque. </p>
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-sm-4">
                       <div class="box">
+                        <div class="icon"><i class="fa fa-bolt"></i></div>
+                        <h5 class="heading">Branding</h5>
+                        <p>Aenean id eros eu leo scelerisque.</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="box">
+                        <div class="icon"><i class="fa fa-rocket"></i></div>
+                        <h5 class="heading">Product Design</h5>
+                        <p>Aenean id eros eu leo scelerisque.</p>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="box">
                         <div class="icon"><i class="fa fa-lightbulb-o"></i></div>
-                        <h5 class="heading">Consulting</h5>
-                        <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-envelope-o"></i></div>
-                        <h5 class="heading">Email Marketing</h5>
-                        <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="box">
-                        <div class="icon"><i class="fa fa-user"></i></div>
-                        <h5 class="heading">UX &amp; UI</h5>
-                        <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                        <h5 class="heading">Mkt Digital</h5>
+                        <p>Aenean id eros eu leo scelerisque. </p>
                       </div>
                     </div>
                   </div>
@@ -143,7 +143,7 @@
             <div class="container clearfix">
               <div class="row">
                 <div class="col-md-12">
-                  <h2 class="heading title-4">Portfolio</h2>
+                  <h2 class="title-4">Portfolio</h2>
                   <p class="text-center">You can make also a portfolio or image gallery.</p>
                   <div class="row">
                     <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
@@ -196,9 +196,9 @@
             <div class="container clearfix">
               <div class="row services">
                 <div class="col-md-12">
-                  <h2 class="heading">Friends Tools</h2>
+                  <h2 class="heading title-5">Friends Tools</h2>
                   <div class="row tools">
-                          <div class="row text-center">
+                          <div class="row tool-row text-center">
                             <div class="col-md-3">
                               <i class="devicon-html5-plain-wordmark colored"></i>
                             </div>
@@ -212,8 +212,7 @@
                               <i class="devicon-photoshop-plain colored"></i>
                             </div>
                           </div>
-                          <span class="divisor"></span>
-                          <div class="row text-center">
+                          <div class="row tool-row text-center">
                             <div class="col-md-3">
                               <i class="devicon-git-plain colored"></i>
                             </div>
@@ -241,39 +240,8 @@
                 <div class="col-md-12">
                   <h2 class="heading title-6">Contact</h2>
                   <div class="row">
-                    <div class="col-md-6">
-                      <form id="contact-form" method="post" action="contact.php" class="contact-form">
-                        <div class="controls">
-                          <div class="row">
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="name">Your firstname *</label>
-                                <input type="text" name="name" placeholder="Enter your firstname" required="required" class="form-control">
-                              </div>
-                            </div>
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label for="surname">Your lastname *</label>
-                                <input type="text" name="surname" placeholder="Enter your  lastname" required="required" class="form-control">
-                              </div>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your email *</label>
-                            <input type="email" name="email" placeholder="Enter your  email" required="required" class="form-control">
-                          </div>
-                          <div class="form-group">
-                            <label for="surname">Your message for us *</label>
-                            <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                          </div>
-                          <div class="text-center">
-                            <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="col-md-6">
-                    <p class="mail">fransu.dev@gmail.com</p>
+                    <div class="col-md-12 col-xs-12">
+                    <p class="mail">fransu.dev@gmail.com <br> +569 5240770</p>
                    <p class="social">
                    <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a>
                    <a href="#" title="" class="twitter"><i class="fa fa-linkedin"></i></a>
@@ -283,7 +251,7 @@
                   </div>
                   <div class="row copyright credito">
                     <div class="col-md-6">
-                      <p>&copy;2017 francisca ojeda/laboratoria</p>
+                      <p>&copy;2017 with </p>
                     </div>
                     <div class="col-md-6 credito">
                       <p class="credit">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
