--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-sm-12">
                   <h1>Francisca Ojeda</h1><!--SEO -->
-                  <img src="img/logo_lilac-02.png" class="logo_lilac"> <br>
+                  <img src="img/logo_white.png" class="logo_lilac"> <br>
                   <p class="">Design & Developer</p>
                   <p class="italic">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>
                 </div>
@@ -249,11 +249,11 @@
                    <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a>
                     </div>
                   </div>
-                  <div class="row copyright credito">
+                  <div class="row copyright credito-a">
                     <div class="col-md-6">
-                      <p>&copy;2017 with </p>
+                      <p>&copy;2017 Shining bright like a <i class="fa fa-diamond" aria-hidden="true"></i> </p>
                     </div>
-                    <div class="col-md-6 credito">
+                    <div class="col-md-6 credito-b">
                       <p class="credit">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
                        <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
                     </div>
