--- a/index.html
+++ b/index.html
@@ -144,45 +144,45 @@
               <div class="row">
                 <div class="col-md-12">
                   <h2 class="title-4">Portfolio</h2>
-                  <p class="text-center">You can make also a portfolio or image gallery.</p>
+                  <p class="text-center">Trabajos desarrollados durante el Bootcamp</p>
                   <div class="row">
                     <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
                     <figcaption>
-                      <h3>Translab</h3>
-                      <h5>UX Design</h5>
-                    </figcaption><a href="#"></a>
+                      <h3>Design-company</h3>
+                      <h6>Prototipado </h6>
+                    </figcaption><a target="_blank" href="https://franshu.github.io/design-company/"></a>
                   </figure>
                   <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample116.jpg" alt="profile-sample7"/>
                     <figcaption>
                       <h3>Lyft</h3>
-                      <h5>Sound &amp; Vision</h5>
-                    </figcaption><a href="#"></a>
+                      <h6>Prototipado</h6>
+                    </figcaption><a target="_blank" href="https://franshu.github.io/lyft-sprint-3/"></a>
                   </figure>
                   <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample117.jpg" alt="profile-sample6"/>
                     <figcaption>
-                      <h3>Game Planet</h3>
-                      <h5>Web Development</h5>
-                    </figcaption><a href="#"></a>
+                      <h3>Pokédex</h3>
+                      <h6>Uso Api</h6>
+                    </figcaption><a target="_blank" href="https://franshu.github.io/pokemon/"></a>
                   </figure>
                   </div>
                         <div class="row">
                     <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
                     <figcaption>
                       <h3>Translab</h3>
-                      <h5>UX Design</h5>
-                    </figcaption><a href="#"></a>
+                      <h6>UX Design</h6>
+                    </figcaption><a target="_blank" href="https://franshu.github.io/translab/"></a>
                   </figure>
                   <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample116.jpg" alt="profile-sample7"/>
                     <figcaption>
-                      <h3>Lyft</h3>
-                      <h5>Sound &amp; Vision</h5>
-                    </figcaption><a href="#"></a>
+                      <h3>Cachalote Sur</h3>
+                      <h6>Diseño</h6>
+                    </figcaption><a target="_blank" href="http://www.cachalotesur.cl"></a>
                   </figure>
                   <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample117.jpg" alt="profile-sample6"/>
                     <figcaption>
-                      <h3>Game Planet</h3>
-                      <h5>Web Development</h5>
-                    </figcaption><a href="#"></a>
+                      <h3>Riego-Pro</h3>
+                      <h5>Diseño</h5>
+                    </figcaption><a target="_blank" href="http://www.riegopro.cl/#home"></a>
                   </figure>
                   </div>
               </div>
@@ -233,29 +233,26 @@
           </div>
         </section><!-- /.Herramientas -->
         <!-- section06 Contacto y redes sociales-->
-        <section id="page6">
+        <section id="page06">
           <div class="content">
             <div class="container clearfix">
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 col-xs-12">
                   <h2 class="heading title-6">Contact</h2>
                   <div class="row">
                     <div class="col-md-12 col-xs-12">
                     <p class="mail">fransu.dev@gmail.com <br> +569 5240770</p>
+                    <a  target="_blank" href="https://franshu.carbonmade.com/"><img class="img-responsive cmlogo" src="img/cmlogo.png"></a>
                    <p class="social">
-                   <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a>
-                   <a href="#" title="" class="twitter"><i class="fa fa-linkedin"></i></a>
-                   <a href="#" title="" class="gplus"><i class="fa fa-pinterest-p"></i></a>
-                   <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a>
+                   <a target="_blank" href="https://www.facebook.com/franshu" title="" class="facebook"><i class="fa fa-facebook"></i></a>
+                   <a target="_blank" href="https://www.linkedin.com/in/francisca-c-ojeda-92b04882" title="" class="twitter"><i class="fa fa-linkedin"></i></a>
+                   <a target="_blank" href="https://cl.pinterest.com/franshu/" title="" class="gplus"><i class="fa fa-pinterest-p"></i></a>
+                   <a target="_blank" href="https://www.instagram.com/fransu/" title="" class="instagram"><i class="fa fa-instagram"></i></a>
                     </div>
                   </div>
                   <div class="row copyright credito-a">
-                    <div class="col-md-6">
+                    <div class="col-md-12 col-xs-12 ">
                       <p>&copy;2017 Shining bright like a <i class="fa fa-diamond" aria-hidden="true"></i> </p>
-                    </div>
-                    <div class="col-md-6 credito-b">
-                      <p class="credit">Code by <a href="https://bootstrapious.com/portfolio-themes">Bootstrapious</a></p>
-                       <!-- Not removing these links is part of the license conditions of the template. Thanks for understanding :) If you want to use the template without the attribution links, you can do so after supporting further themes development at https://bootstrapious.com/donate  -->
                     </div>
                   </div>
                 </div>
