--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
                   <h2 class="title-4">Portfolio</h2>
                   <p class="text-center">Trabajos desarrollados durante el Bootcamp</p>
                   <div class="row">
-                    <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
+                    <figure class="snip1580"><img src=img/portfolio-01.png>
                     <figcaption>
                       <h3>Design-company</h3>
                       <h6>Prototipado </h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/design-company/"></a>
                   </figure>
-                  <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample116.jpg" alt="profile-sample7"/>
+                  <figure class="snip1580"><img src=img/portfolio-01.png>
                     <figcaption>
                       <h3>Lyft</h3>
                       <h6>Prototipado</h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/lyft-sprint-3/"></a>
                   </figure>
-                  <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample117.jpg" alt="profile-sample6"/>
+                  <figure class="snip1580"><img src=img/portfolio-03.png>
                     <figcaption>
                       <h3>Pokédex</h3>
                       <h6>Uso Api</h6>
@@ -166,19 +166,19 @@
                   </figure>
                   </div>
                         <div class="row">
-                    <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample106.jpg" alt="profile-sample2"/>
+                    <figure class="snip1580"><img src=img/portfolio-01.png>
                     <figcaption>
                       <h3>Translab</h3>
                       <h6>UX Design</h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/translab/"></a>
                   </figure>
-                  <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample116.jpg" alt="profile-sample7"/>
+                  <figure class="snip1580"><img src=img/portfolio-05.png>
                     <figcaption>
                       <h3>Cachalote Sur</h3>
                       <h6>Diseño</h6>
                     </figcaption><a target="_blank" href="http://www.cachalotesur.cl"></a>
                   </figure>
-                  <figure class="snip1580"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample117.jpg" alt="profile-sample6"/>
+                  <figure class="snip1580"><img src=img/portfolio-06.png>
                     <figcaption>
                       <h3>Riego-Pro</h3>
                       <h5>Diseño</h5>
