--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
                   <h2 class="title-4">Portfolio</h2>
                   <p class="text-center">Trabajos desarrollados durante el Bootcamp</p>
                   <div class="row">
-                    <figure class="snip1580"><img src=img/portfolio-01.png>
+                    <figure class="snip1580"><img src=img/portfolio-01.jpg>
                     <figcaption>
                       <h3>Design-company</h3>
                       <h6>Prototipado </h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/design-company/"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-01.png>
+                  <figure class="snip1580"><img src=img/portfolio-01.jpg>
                     <figcaption>
                       <h3>Lyft</h3>
                       <h6>Prototipado</h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/lyft-sprint-3/"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-03.png>
+                  <figure class="snip1580"><img src=img/portfolio-03.jpg>
                     <figcaption>
                       <h3>Pokédex</h3>
                       <h6>Uso Api</h6>
@@ -166,19 +166,19 @@
                   </figure>
                   </div>
                         <div class="row">
-                    <figure class="snip1580"><img src=img/portfolio-01.png>
+                    <figure class="snip1580"><img src=img/portfolio-01.jpg>
                     <figcaption>
                       <h3>Translab</h3>
                       <h6>UX Design</h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/translab/"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-05.png>
+                  <figure class="snip1580"><img src=img/portfolio-05.jpg>
                     <figcaption>
                       <h3>Cachalote Sur</h3>
                       <h6>Diseño</h6>
                     </figcaption><a target="_blank" href="http://www.cachalotesur.cl"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-06.png>
+                  <figure class="snip1580"><img src=img/portfolio-06.jpg>
                     <figcaption>
                       <h3>Riego-Pro</h3>
                       <h5>Diseño</h5>
@@ -265,7 +265,7 @@
     <!-- Javascript files-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/jquery.onepage-scroll.js"></script>
     <script src="js/front.js"></script>
