--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <h1>Francisca Ojeda</h1><!--SEO -->
                   <img src="img/logo_white.png" class="logo_lilac"> <br>
                   <p class="">Design & Developer</p>
-                  <p class="italic">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>
+                  <p class="italic">hola este es mi portafolio</p>
                 </div>
               </div>
             </div>
@@ -152,13 +152,13 @@
                       <h6>Prototipado </h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/design-company/"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-01.jpg>
+                  <figure class="snip1580"><img src=img/portfolio-03.jpg>
                     <figcaption>
                       <h3>Lyft</h3>
                       <h6>Prototipado</h6>
                     </figcaption><a target="_blank" href="https://franshu.github.io/lyft-sprint-3/"></a>
                   </figure>
-                  <figure class="snip1580"><img src=img/portfolio-03.jpg>
+                  <figure class="snip1580"><img src=img/portfolio-01.jpg>
                     <figcaption>
                       <h3>Pokédex</h3>
                       <h6>Uso Api</h6>
